# archer-c6u

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  c6u.spec  config.example.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
c6u/: __init__.py  acme.py  aliases.py  anomaly.py  arpwatch.py  audit.py  automation.py  backup.py  cli.py  client.py  commands.py  config.py  csv_export.py  cve.py  daemon.py  db.py  digest.py  discordbot.py  discover.py  dnscheck.py  dnsfilter.py  extping.py  fakerouter.py  fingerprint.py  firmware_check.py  heatmap.py  hibp.py  latency.py  metrics.py  mqtt.py  netflow.py  notifier.py  parental.py  passivedns.py  pcap.py  plugins.py  portscan.py  presence.py  publicip.py  pushnotify.py  (+25 more)
completions/: _c6u.zsh  c6u.bash  c6u.fish  c6u.ps1
grafana/: c6u_dashboard.json
ha_custom_component/c6u/: __init__.py  manifest.json  sensor.py
plugins/: example_hello.py
tests/: test_aliases.py  test_automation.py  test_backup_search.py  test_cli.py  test_db.py  test_events.py  test_heatmap_sqlcli.py  test_parental_watchdog.py  test_portscan.py  test_publicip.py  test_push_fingerprint.py  test_qr.py  test_qr_payload.py  test_round3.py  test_rules.py  test_sla_anomaly.py  test_wol.py
